   - deraadt@cvs.openbsd.org 2002/05/07 19:54:36
     [ssh.h]
     use ssh uid
   - deraadt@cvs.openbsd.org 2002/05/08 21:06:34
     [ssh.h]
     move to sshd.sshd instead
   - stevesk@cvs.openbsd.org 2002/05/11 20:24:48
     [ssh.h]
     typo in comment
   - itojun@cvs.openbsd.org 2002/05/13 02:37:39
     [auth-skey.c auth2.c]
     less warnings.  skey_{respond,query} are public (in auth.h)

20020514
 - (stevesk) [README.privsep] PAM+privsep works with Solaris 8.
 - (tim) [sshpty.c] set tty modes when allocating old style bsd ptys to
   match what newer style ptys have when allocated. Based on a patch by
   Roger Cornelius <rac@tenzing.org>
 - (tim) [README.privsep] UnixWare 7 and OpenUNIX 8 work.
 - (tim) [README.privsep] remove reference to UnixWare 7 and OpenUNIX 8
   from PAM-enabled pragraph. UnixWare has no PAM.
 - (tim) [contrib/caldera/openssh.spec] update version.

20020513
 - (stevesk) add initial README.privsep
 - (stevesk) [configure.ac] nicer message: --with-privsep-user=user
 - (djm) Add --with-superuser-path=xxx configure option to specify 
   what $PATH the superuser receives.
 - (djm) Bug #231: UsePrivilegeSeparation turns off Banner.
 - (djm) Add --with-privsep-path configure option
 - (djm) Update RPM spec file: different superuser path, use
   /var/empty/sshd for privsep
 - (djm) Bug #234: missing readpassphrase declaration and defines
 - (djm) Add INSTALL warning about SSH protocol 1 blowfish w/ 
    OpenSSL < 0.9.6

20020511
 - (tim) [configure.ac] applied a rework of djm's OpenSSL search cleanup patch.
   Now only searches system and /usr/local/ssl (OpenSSL's default install path)
   Others must use --with-ssl-dir=....
 - (tim) [monitor_fdpass.c] fix for systems that have both
   HAVE_ACCRIGHTS_IN_MSGHDR and HAVE_CONTROL_IN_MSGHDR. Ie. sys/socket.h 
   has #define msg_accrights msg_control

20020510
 - (stevesk) [auth.c] Shadow account and expiration cleanup.  Now
   check for root forced expire.  Still don't check for inactive.